Fix closing a secondary viewContainer on startup settings change

Apply split view settings only when changing the corresponding option.

BUG: 426221
FIXED-IN: 21.08.2